--- a/Index.css
+++ b/Index.css
@@ -27,8 +27,8 @@ h4 {
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	width: 350px;
-	height: 450px;
+	width: 400px;
+	height: 500px;
 	background: #e0e1dc;
 	transform-style: preserve-3d;
 	transform: translate(-50%,-50%) perspective(2000px);
@@ -83,8 +83,8 @@ h4 {
 }
 
 .card .imgBox img {
-	min-width: 350px;
-	max-height: 450px;
+	min-width: 400px;
+	max-height: 500px;
 }
 
 .card:hover .imgBox {
@@ -96,7 +96,11 @@ h4 {
 	transition: .6s;
   box-shadow: 300px 200px 100px rgba(0, 0, 0, .4) inset;
 }
-
+audio {
+	display: block;
+	margin: 0 auto; 
+	transform: rotate(-10deg);
+}
 .card .details {
 	position: absolute;
 	top: 0;
